# MX2G4RW

./: CMakeLists.txt  README.md  setup.sh
docs/images/: README.md
mx2g4rw/: CMakeLists.txt
mx2g4rw/Base/: CMakeLists.txt  ReweightSuite.cxx  ReweightSuite.h  Utilities.cxx  Utilities.h
mx2g4rw/app/: CMakeLists.txt  new_configuration.fcl  new_weighting.c++
